@@ -71,7 +71,7 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Example.LightBDD.Fixie2", "
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Autofac", "src\LightBDD.Autofac\LightBDD.Autofac.csproj", "{BA30A12E-C25B-47DF-9761-C3D752C59D3A}"
 EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "LightBDD.Autofac.UnitTests", "test\LightBDD.Autofac.UnitTests\LightBDD.Autofac.UnitTests.csproj", "{F130AD38-3852-43B1-840E-689E57D38790}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Autofac.UnitTests", "test\LightBDD.Autofac.UnitTests\LightBDD.Autofac.UnitTests.csproj", "{F130AD38-3852-43B1-840E-689E57D38790}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
